test_results.log
============================= test session starts ==============================
platform linux -- Python 3.12.1, pytest-9.0.2, pluggy-1.6.0 -- /home/codespace/.python/current/bin/python
cachedir: .pytest_cache
metadata: {'Python': '3.12.1', 'Platform': 'Linux-6.8.0-1030-azure-x86_64-with-glibc2.39', 'Packages': {'pytest': '9.0.2', 'pluggy': '1.6.0'}, 'Plugins': {'anyio': '4.11.0', 'timeout': '2.4.0', 'cov': '7.0.0', 'html': '4.1.1', 'metadata': '3.1.1'}, 'JAVA_HOME': '/usr/local/sdkman/candidates/java/current'}
rootdir: /workspaces/calkproject
plugins: anyio-4.11.0, timeout-2.4.0, cov-7.0.0, html-4.1.1, metadata-3.1.1
collecting ... collected 212 items / 1 error

==================================== ERRORS ====================================
______________ ERROR collecting tests/test_edge_cases_extended.py ______________
/usr/local/python/3.12.1/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
/usr/local/python/3.12.1/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/usr/local/python/3.12.1/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
/usr/local/python/3.12.1/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/local/python/3.12.1/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/usr/local/python/3.12.1/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/workspaces/calkproject/tests/test_edge_cases_extended.py", line 306
E       class TestReciprocal EdgeCases:
E                            ^^^^^^^^^
E   SyntaxError: invalid syntax
=============================== warnings summary ===============================
tests/test_integration.py:5
  /workspaces/calkproject/tests/test_integration.py:5: PytestUnknownMarkWarning: Unknown pytest.mark.integration - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.integration

tests/test_integration.py:84
  /workspaces/calkproject/tests/test_integration.py:84: PytestUnknownMarkWarning: Unknown pytest.mark.integration - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.integration

tests/test_integration.py:127
  /workspaces/calkproject/tests/test_integration.py:127: PytestUnknownMarkWarning: Unknown pytest.mark.integration - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.integration

tests/test_integration.py:156
  /workspaces/calkproject/tests/test_integration.py:156: PytestUnknownMarkWarning: Unknown pytest.mark.integration - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.integration

tests/test_integration.py:225
  /workspaces/calkproject/tests/test_integration.py:225: PytestUnknownMarkWarning: Unknown pytest.mark.integration - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.integration

tests/test_integration.py:273
  /workspaces/calkproject/tests/test_integration.py:273: PytestUnknownMarkWarning: Unknown pytest.mark.integration - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.integration

tests/test_integration.py:304
  /workspaces/calkproject/tests/test_integration.py:304: PytestUnknownMarkWarning: Unknown pytest.mark.integration - is this a typo?  You can register custom marks to avoid this warning - for details, see https://docs.pytest.org/en/stable/how-to/mark.html
    @pytest.mark.integration

-- Docs: https://docs.pytest.org/en/stable/how-to/capture-warnings.html
=========================== short test summary info ============================
ERROR tests/test_edge_cases_extended.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
========================= 7 warnings, 1 error in 0.79s =========================
